Fixed large button text alignment

--- a/app/scss/brands/maytag/_answers.scss
+++ b/app/scss/brands/maytag/_answers.scss
@@ -315,7 +315,7 @@
 		}
 		.label-wrap {
 			position: absolute;
-			bottom: 11px;
+			bottom: 15px;
 			left: 66px;
 			text-align: left;
 		}
